# bowlingScore

./: .gitignore  README.md  main.py  pyproject.toml
backend/: bowling_module.py
bowlingScore/: main.py
bowlingScore/backend/: scoring.py
bowlingScore/gui/: app.py
bowling_engine/: bowling_module.py
gui/: application.py
tests/: scoring.py  test.py
