[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bowlingScore"
version = "0.1.0"
description = "Calculates bowling scores"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "gui"]
